--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+
   <title>Simon Says</title>
 </head>
 <body>
 
-  
+  <section class="container">
+    <div>
+      <div class="title-container">
+        <h1>Hai 5 secondi per ricordare i numeri nello schermo</h1>
+      </div>
+      
+      <div class="box-container">
+      </div>
+    </div>
+  </section>
+
 
   <script src="script.js"></script>
 </body>
