--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
 
   <section class="container">
     <div>
+      <div class="img-container">
+        <img src="img/simon-says-logo.jpg" alt="">
+      </div>
+
       <div class="title-container">
         <h1>Hai 5 secondi per ricordare i numeri nello schermo</h1>
       </div>
       
       <div class="box-container">
+      </div>
+
+      <div class="title-container">
+        <h2 id="output-message"></h2>
+        <!-- <div class="square-1"></div> -->
       </div>
     </div>
   </section>
